--- a/style.css
+++ b/style.css
@@ -51,12 +51,34 @@ body {
   transition: 0.5s ease-in-out;
 }
 
-img {
-  width: 200px;
-  height: 200px;
-  transition: 0.5s;
+.cards:hover {
+  transform: translateY(20px);
 }
 
-.cards:hover img {
-  transform: scale(1.5);
+.cards::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
+  z-index: 2;
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.cards:hover::before {
+  opacity: 0.5;
+}
+
+.cards img {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
