--- a/style.css
+++ b/style.css
@@ -82,3 +82,17 @@ body {
   left: 0;
   object-fit: cover;
 }
+
+.cards .recipe-info {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  transform: translateX(10px);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  margin-left: -30px;
+}
+
+.cards:hover .recipe-info {
+  opacity: 1;
+}
