--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 *,
 *::after,
@@ -12,7 +12,8 @@
   --card-width: 300px;
   --card-height: 360px;
   --body-bg: #212b4e;
-  --font-family: "Roboto";
+  --font-color: #fff;
+  --font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -42,8 +43,9 @@ body {
 .cards {
   height: var(--card-height);
   width: var(--card-width);
-  background-color: #fff;
+  background-color: var(--font-color);
   display: flex;
+  border-radius: 15px;
   align-items: flex-end;
   padding: 2rem;
   position: relative;
@@ -61,6 +63,7 @@ body {
   top: 0;
   left: 0;
   display: block;
+  border-radius: 15px;
   width: 100%;
   height: 100%;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
@@ -70,7 +73,7 @@ body {
 }
 
 .cards:hover::before {
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .cards img {
@@ -81,12 +84,13 @@ body {
   top: 0;
   left: 0;
   object-fit: cover;
+  border-radius: 15px;
 }
 
 .cards .recipe-info {
   position: relative;
   z-index: 3;
-  color: #fff;
+  color: var(--font-color);
   transform: translateX(10px);
   transition: 0.5s ease-in-out;
   opacity: 0;
@@ -99,22 +103,25 @@ body {
 
 .recipe-btn {
   background: transparent;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   height: 2rem;
-  width: 5.5rem;
-  border: 2px solid #fff;
-  color: #fff;
+  width: 6rem;
+  border: 2px solid var(--font-color);
+  color: var(--font-color);
   font-family: var(--font-family);
   font-size: 1rem;
-  border-radius: 5px;
+  font-weight: 700;
+  outline: none;
   transition: 0.2s;
+  cursor: pointer;
 }
 
 .recipe-btn:hover {
-  background-color: #fff;
+  background-color: var(--font-color);
   color: #000;
 }
 
 .recipe-title {
   font-size: 2rem;
+  letter-spacing: 1px;
 }
