--- a/style.css
+++ b/style.css
@@ -125,3 +125,41 @@ body {
   font-size: 2rem;
   letter-spacing: 1px;
 }
+
+.popup-view {
+  z-index: 4;
+  background: brown;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-card {
+  z-index: 4;
+  position: relative;
+  display: flex;
+  width: 800px;
+  height: 500px;
+  margin: 20px;
+}
+
+.popup-card .food-img {
+  z-index: 2;
+  background-color: #212b4e;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+}
+
+.popup-card .food-img img {
+  z-index: 4;
+  position: relative;
+  width: 450px;
+}
