--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 :root {
   --cards-width: 300px;
   --cards-height: 360px;
-  --body-bg: #212b4e;
+  --body-bg: rgb(33, 43, 78);
+  --body-bg-blur: rgba(33, 43, 78, 0.2);
   --font-color: #fff;
   --font-family: "Poppins", sans-serif;
 }
@@ -128,7 +129,9 @@ body {
 
 .popup-view {
   z-index: 4;
-  background: brown;
+
+  background: var(--body-bg-blur);
+  backdrop-filter: blur(8px);
   position: fixed;
   top: 0;
   left: 0;
@@ -150,7 +153,7 @@ body {
 
 .popup-card .food-img {
   z-index: 2;
-  background: brown;
+  background: transparent;
   position: relative;
   display: flex;
   justify-content: center;
