--- a/style.css
+++ b/style.css
@@ -193,3 +193,15 @@ body {
   margin: 20px;
   cursor: pointer;
 }
+
+.food-name {
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.line_br {
+  width: 100%;
+  height: 0.3px;
+
+  background-color: rgba(128, 128, 128, 0.342);
+}
