--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ body {
   width: 100%;
   height: 0.3px;
   background-color: rgba(128, 128, 128, 0.342);
+  margin-bottom: 4rem;
 }
 
 .food-details {
@@ -210,5 +211,6 @@ body {
   list-style: none;
   align-items: center;
   justify-content: space-around;
+  margin-bottom: 1rem;
   background-color: aqua;
 }
