--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ body {
   height: 0.3px;
   background-color: rgba(128, 128, 128, 0.342);
   margin-bottom: 4rem;
+  margin-top: 0.5rem;
 }
 
 .food-details {
@@ -212,6 +213,7 @@ body {
   align-items: center;
   justify-content: space-around;
   margin-bottom: 1rem;
+  text-align: center;
   /* background-color: aqua; */
 }
 
@@ -229,4 +231,36 @@ body {
   text-transform: capitalize;
   font-size: 1rem;
   text-align: center;
+}
+
+.visit {
+  margin-top: 3rem;
+  height: 3rem;
+  width: 55%;
+  margin: auto;
+  background-color: var(--body-bg);
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+  transition: all 0.5s;
+  cursor: pointer;
+}
+.visit:hover {
+  transform: scale(1.1);
+}
+
+.visit a {
+  text-decoration: none;
+  font-family: var(--font-family);
+  font-size: 1.2rem;
+  color: var(--font-color);
+}
+
+.snack {
+  text-align: center;
+}
+
+.a {
+  margin-top: 0.5rem;
 }
