--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ body {
 .popup-card .food-img {
   z-index: 2;
   background: transparent;
+  /* background: pink; */
   position: relative;
   display: flex;
   justify-content: center;
@@ -263,4 +264,43 @@ body {
 
 .a {
   margin-top: 0.5rem;
+}
+
+/* ? Responsive styles */
+
+@media (max-width: 900px) {
+  .popup-card {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 550px;
+    height: auto;
+  }
+
+  .popup-card .food-img {
+    z-index: 4;
+    width: 100%;
+    height: 220px;
+    transform: translateY(0);
+    /* background-color: aqua; */
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+  }
+  .popup-card .food-img img {
+    width: 70%;
+    height: 230px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0px;
+    /* border-bottom-right-radius: 10px; */
+    margin-right: 3.7em;
+  }
+
+  .popup-card .food-info {
+    width: 70%;
+    /* height: auto */
+    /* margin-left: 3.7em; */
+    margin-top: 1em;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
 }
