--- a/style.css
+++ b/style.css
@@ -142,11 +142,13 @@ body {
   align-items: center;
   visibility: hidden;
   opacity: 0;
+  transition: all 0.2s ease-in-out;
 }
 
 .popup-view.active {
   visibility: visible;
   opacity: 1;
+  transition: all 0.5s ease-in-out;
 }
 
 .popup-card {
