--- a/style.css
+++ b/style.css
@@ -28,10 +28,47 @@ body {
   min-height: 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   background-color: var(--body-bg);
   font-family: var(--font-family);
+}
+
+.form {
+  width: 50%;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form .input {
+  width: 50%;
+  height: 3rem;
+  outline: none;
+  border: none;
+  padding: 1em;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+.input-button {
+  height: 3rem;
+  width: 15%;
+  margin: 1rem;
+  font-family: var(--font-family);
+  color: var(--font-color);
+  font-weight: 800;
+  background-color: #008cff;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
 .container {
